--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@
   <script>
     const database = {
       plants: [
-        { name: "Klaproos", difficulty: "easy", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Papaver_rhoeas_-_Klaproos_bloem.jpg/800px-Papaver_rhoeas_-_Klaproos_bloem.jpg" },
-        { name: "Madeliefje", difficulty: "easy", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Bellis_perennis_-_Kleiner_G%C3%A4nsebl%C3%BCmchen.jpg/800px-Bellis_perennis_-_Kleiner_G%C3%A4nsebl%C3%BCmchen.jpg" },
-        { name: "Zevenblad", difficulty: "medium", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/39/Aegopodium_podagraria_003.JPG/800px-Aegopodium_podagraria_003.JPG" },
-        { name: "Eikvaren", difficulty: "hard", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/Polypodium_vulgare.jpg/800px-Polypodium_vulgare.jpg" }
+        { name: "Klaproos", difficulty: "easy", image: "https://cdn.pixabay.com/photo/2017/05/13/17/31/poppy-2314201_1280.jpg" },
+        { name: "Madeliefje", difficulty: "easy", image: "https://cdn.pixabay.com/photo/2015/04/19/08/32/daisy-729510_1280.jpg" },
+        { name: "Zevenblad", difficulty: "medium", image: "https://cdn.pixabay.com/photo/2023/06/19/13/44/ground-elder-8074250_1280.jpg" },
+        { name: "Eikvaren", difficulty: "hard", image: "https://cdn.pixabay.com/photo/2020/10/16/17/02/fern-5660053_1280.jpg" }
       ],
       trees: [
-        { name: "Zomereik", difficulty: "easy", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Quercus_robur_leaves.jpg/800px-Quercus_robur_leaves.jpg" },
-        { name: "Beuk", difficulty: "medium", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/6/64/Fagus_sylvatica_foliage1.jpg/800px-Fagus_sylvatica_foliage1.jpg" },
-        { name: "Wilde appel", difficulty: "hard", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/Malus_sylvestris0.jpg/800px-Malus_sylvestris0.jpg" }
+        { name: "Zomereik", difficulty: "easy", image: "https://cdn.pixabay.com/photo/2018/10/10/12/36/oak-leaves-3736765_1280.jpg" },
+        { name: "Beuk", difficulty: "medium", image: "https://cdn.pixabay.com/photo/2021/06/25/18/56/beech-6365190_1280.jpg" },
+        { name: "Wilde appel", difficulty: "hard", image: "https://cdn.pixabay.com/photo/2019/06/01/21/09/crab-apple-4244795_1280.jpg" }
       ],
       spiders: [
-        { name: "Kruisspin", difficulty: "easy", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Araneus_diadematus_%28aka%29.jpg/800px-Araneus_diadematus_%28aka%29.jpg" },
-        { name: "Viervlekwielwebspin", difficulty: "medium", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/2b/Araneus_quadratus.jpg/800px-Araneus_quadratus.jpg" },
-        { name: "Veldspin", difficulty: "hard", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/Pardosa_amentata_female.jpg/800px-Pardosa_amentata_female.jpg" }
+        { name: "Kruisspin", difficulty: "easy", image: "https://cdn.pixabay.com/photo/2017/10/10/20/03/spider-2836507_1280.jpg" },
+        { name: "Viervlekwielwebspin", difficulty: "medium", image: "https://cdn.pixabay.com/photo/2023/08/11/14/13/spider-8183790_1280.jpg" },
+        { name: "Veldspin", difficulty: "hard", image: "https://cdn.pixabay.com/photo/2019/06/04/21/18/spider-4252446_1280.jpg" }
       ]
     };
 
